Ass-1/getting_started/test_files/syntax_errors/InvalidMethodCall.cpm
class MyClass {
  Init(): boolean {
    volatile test: int

    test := Bar(a,) //@error - syntax (trailing comma in argument list)
    return false
  }

  Bar(a: int,): int { //@error - syntax (trailing comma in parameter list)
    return 1
  }
}

main() : int  {
  print(MyClass().Init())
  return 0
}